@@ -461,10 +461,14 @@ a {
  * It has the same width as the cell, not the thumbnail.
  */
 .g-va-thumb-texts {
-margin-top: 2px;
+	margin-top: 2px;
 }
 
 .g-thumb-caption {
+}
+
+.g-thumb-description {
+	margin-top: 2px;
 }
 
 .g-va-infos {
