@@ -1,3 +1,7 @@
+2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b40
+
+ * Change: Put album description in its own box in thumbs view.
+ 
 2007-02-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b39
 
  * Fix: Added missing files to po/filelist-core, adjust pot files.
